# ragel

./: CREDITS  Makefile.am  autogen.sh  configure.in
doc/: ragel-guide.tex
ragel/: Makefile.am  config.h.in  goipgoto.h
